# damic-backside-calibration

./: .gitignore  README.md
analysis/: CMakeCache.txt  CMakeLists.txt  Makefile  backside_calibration_analysis  cmake_install.cmake  main.cxx  output.root
analysis/include/: DamicBackSideCalibrationFit.h  DamicBackSideRooFit.h  DamicParticleInteraction.h
analysis/plots/: plotDistortedSpectrum.cxx
analysis/src/: DamicBackSideCalibrationFit.cxx  DamicParticleInteraction.cxx
sims/: 122.mac  CMakeLists.txt  silicon.cc
sims/include/: DAMICAm241SourceGenerator.hh  SiliconActionInitialization.hh  SiliconAnalysis.hh  SiliconDetectorConstruction.hh  SiliconEventAction.hh  SiliconHit.hh  SiliconPhysicsList.hh  SiliconPrimaryGeneratorAction.hh  SiliconRunAction.hh  SiliconSD.hh  SiliconSteppingAction.hh  SimulationSettings.hh
sims/src/: DAMICAm241SourceGenerator.cc  SiliconActionInitialization.cc  SiliconDetectorConstruction.cc  SiliconEventAction.cc  SiliconHit.cc  SiliconPhysicsList.cc  SiliconPrimaryGeneratorAction.cc  SiliconRunAction.cc  SiliconSD.cc  SiliconSteppingAction.cc
